--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
+    "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/drawer": "^5.0.3",
+    "@react-navigation/material-bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.3",
     "@react-navigation/stack": "^5.0.3",
     "expo": "~36.0.0",
@@ -18,9 +20,11 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
